--- a/episodes/season_01.yml
+++ b/episodes/season_01.yml
@@ -31,7 +31,7 @@ episodes:
     fellow employees with 'normal' families.  He decides to enlist the aid of psychologist
     Marvin Monroe to treat his wife and children.
   simpsonsworld_id: 273392195780
-  good: false
+  good: true
   character: 
 - title: Bart the General
   season: 1
@@ -62,7 +62,7 @@ episodes:
   description: Bart attempts to impress his new friends by vandalizing a statue of
     the town's founding father, Jebediah Springfield.
   simpsonsworld_id: 305663555641
-  good: false
+  good: true
   character: 
 - title: Life on the Fast Lane
   season: 1
@@ -87,7 +87,7 @@ episodes:
   description: To Homer's delight, Bart is sent to France for the summer as part of
     a student exchange program.
   simpsonsworld_id: 306382403766
-  good: false
+  good: true
   character: 
 - title: Krusty Gets Busted
   season: 1
@@ -95,7 +95,7 @@ episodes:
   description: When Homer positively identifies Krusty the Clown as an armed robber,
     Bart attempts to clear his idol's name.
   simpsonsworld_id: 288019523914
-  good: false
+  good: true
   character: 
 - title: Some Enchanted Evening
   season: 1
