mark TKs, remove some extras

--- a/episodes/season_02.yml
+++ b/episodes/season_02.yml
@@ -13,7 +13,7 @@ episodes:
   description: Homer's life changes dramatically when he purchases a miracle hair
     growth formula.
   simpsonsworld_id: 260539971564
-  good: false
+  good: true
   character: 
 - title: Treehouse of Horror
   season: 2
@@ -21,7 +21,7 @@ episodes:
   description: The Simpsons tell three bloodcurdling tales of horror on Halloween
     night.
   simpsonsworld_id: 260538435884
-  good: false
+  good: true
   character: 
 - title: Two Cars in Every Garage and Three Eyes on Every Fish
   season: 2
@@ -29,14 +29,14 @@ episodes:
   description: Homer supports Mr. Burns in his bid for governor, but Marge remains
     loyal to Burns's political opposition.
   simpsonsworld_id: 260537411822
-  good: false
+  good: true
   character: 
 - title: Dancin' Homer
   season: 2
   episode: 5
   description: Homer becomes the official mascot for a major league baseball team.
   simpsonsworld_id: 260538435888
-  good: false
+  good: maybe
   character: 
 - title: Dead Putting Society
   season: 2
@@ -44,7 +44,7 @@ episodes:
   description: Homer and Ned Flanders pressure their sons to win a miniature golf
     championship.
   simpsonsworld_id: 260539459670
-  good: false
+  good: true
   character: 
 - title: Bart vs. Thanksgiving
   season: 2
@@ -52,7 +52,7 @@ episodes:
   description: Bart learns the true meaning of Thanksgiving when he runs away from
     home after having an argument with Lisa.
   simpsonsworld_id: 260539459701
-  good: false
+  good: maybe
   character: 
 - title: Bart the Daredevil
   season: 2
@@ -60,16 +60,15 @@ episodes:
   description: Bart is determined to leap a gorge on his skateboard after witnessing
     the death defying stunts of a real daredevil.
   simpsonsworld_id: 260539459702
-  good: false
+  good: true
   character: 
 - title: Itchy and Scratchy and Marge
   season: 2
   episode: 9
   description: Marge initiates a protest movement against gratuitous violence on television
     when Maggie begins acting aggressively after viewing Itchy and Scratchy cartoons.
-    Presented by FXX.
   simpsonsworld_id: 1094123075920
-  good: false
+  good: true
   character: 
 - title: Bart Gets Hit by a Car
   season: 2
@@ -77,7 +76,7 @@ episodes:
   description: When Mr. Burns hits Bart with his car, Homer is enticed by a disreputable
     lawyer to sue him.
   simpsonsworld_id: 260550723760
-  good: false
+  good: maybe
   character: 
 - title: One Fish, Two Fish, Blowfish, Blue Fish
   season: 2
@@ -85,7 +84,7 @@ episodes:
   description: Homer believes he has only twenty-four hours to live after he eats
     an improperly prepared blowfish.
   simpsonsworld_id: 260548675839
-  good: false
+  good: maybe
   character: 
 - title: The Way We Was
   season: 2
@@ -93,7 +92,7 @@ episodes:
   description: Marge recounts to her children how she and Homer first met and fell
     in love.
   simpsonsworld_id: 260549187876
-  good: false
+  good: maybe
   character: 
 - title: Homer vs. Lisa and the 8th Commandment
   season: 2
@@ -101,7 +100,7 @@ episodes:
   description: Lisa disapproves when Homer has cable television installed illegally
     into their home.
   simpsonsworld_id: 260820547692
-  good: false
+  good: maybe
   character: 
 - title: Principal Charming
   season: 2
@@ -109,13 +108,13 @@ episodes:
   description: Homer arranges a date between Principal Skinner and Marge's sister,
     Selma.
   simpsonsworld_id: 263496771968
-  good: false
+  good: maybe
   character: 
 - title: Oh Brother, Where Art Thou?
   season: 2
   episode: 15
   description: Homer locates his long lost half brother Herb and discovers that he
-    is rich. Presented by FXX.
+    is rich.
   simpsonsworld_id: 1094123587812
   good: false
   character: 
@@ -125,23 +124,23 @@ episodes:
   description: Bart must help train Santa's Little Helper to pass an obedience course
     or Homer will give the dog away.
   simpsonsworld_id: 272034883946
-  good: false
+  good: maybe
   character: 
 - title: Old Money
   season: 2
   episode: 17
   description: Grampa Simpson falls in love... and inherits a fortune.
   simpsonsworld_id: 263504963955
-  good: false
+  good: maybe
   character: 
 - title: Brush with Greatness
   season: 2
   episode: 18
   description: Marge renews her interest in becoming an artist after Homer finds an
     old painting of Ringo Starr in the attic.  Mr. Burns commissions Marge to paint
-    a portrait of him. Presented by FXX.
+    a portrait of him.
   simpsonsworld_id: 1094212163883
-  good: false
+  good: maybe
   character: 
 - title: Lisa's Substitute
   season: 2
@@ -149,7 +148,7 @@ episodes:
   description: Lisa develops a crush on her substitute teacher, Mr. Bergstrom.  Bergstrom
     tells Homer he must learn to act as a positive role model for his daughter.
   simpsonsworld_id: 288011331912
-  good: false
+  good: true
   character: 
 - title: The War of the Simpsons
   season: 2
@@ -158,7 +157,7 @@ episodes:
     at a wooded retreat, but Homer takes advantage of the location to attempt to catch
     a legendary catfish.
   simpsonsworld_id: 272040003661
-  good: false
+  good: maybe
   character: 
 - title: Three Men and a Comic Book
   season: 2
@@ -166,7 +165,7 @@ episodes:
   description: Bart and his friends pool their money to purchase the first issue of
     "Radioactive Man" comics, but then cannot decide who gets to keep it.
   simpsonsworld_id: 310368835964
-  good: false
+  good: maybe
   character: 
 - title: Blood Feud
   season: 2
@@ -174,5 +173,5 @@ episodes:
   description: Homer expects a generous gift in return when he donates Bart's blood
     to an ailing Mr. Burns.
   simpsonsworld_id: 272041539932
-  good: false
+  good: maybe
   character: 
