--- a/episodes/season_06.yml
+++ b/episodes/season_06.yml
@@ -6,7 +6,7 @@ episodes:
   description: Bart believes he witnessed Ned Flanders murder his wife.  Lisa's popularity
     soars after her family buys a swimming pool during a heat wave.
   simpsonsworld_id: 300925507538
-  good: false
+  good: true
   character: 
 - title: Lisa's Rival
   season: 6
@@ -31,7 +31,7 @@ episodes:
   description: The Simpsons visit a theme park based on the gratuitously violent Itchy
     and Scratchy cartoons.
   simpsonsworld_id: 283752003577
-  good: false
+  good: true
   character: 
 - title: Sideshow Bob Roberts
   season: 6
@@ -39,14 +39,14 @@ episodes:
   description: Sideshow Bob runs for political office after Mayor Quimby pardons him
     from prison.
   simpsonsworld_id: 275729987504
-  good: false
+  good: true
   character: 
 - title: Treehouse of Horror V
   season: 6
   episode: 6
   description: The Simpsons spin three tales of Halloween horror.
   simpsonsworld_id: 299597891663
-  good: false
+  good: true
   character: 
 - title: Bart's Girlfriend
   season: 6
@@ -54,7 +54,7 @@ episodes:
   description: Bart falls in love with Reverend Lovejoy's beautiful daughter, only
     to discover that she is more of a hellion than he is.
   simpsonsworld_id: 275744323759
-  good: false
+  good: true
   character: 
 - title: Lisa on Ice
   season: 6
@@ -62,14 +62,14 @@ episodes:
   description: Lisa joins a hockey team and finds herself pitted against Bart in a
     critical game.
   simpsonsworld_id: 275746371575
-  good: false
+  good: true
   character: 
 - title: Homer Badman
   season: 6
   episode: 9
   description: Homer is wrongly accused of committing sexual harassment.
   simpsonsworld_id: 275746883653
-  good: false
+  good: true
   character: 
 - title: Grampa vs. Sexual Inadequacy
   season: 6
@@ -77,7 +77,7 @@ episodes:
   description: While selling a homemade tonic guaranteed to increase sexual desire
     in men, Grampa reveals that Homer's conception was accidental.
   simpsonsworld_id: 274264643876
-  good: false
+  good: true
   character: 
 - title: Fear of Flying
   season: 6
@@ -93,7 +93,7 @@ episodes:
   description: Homer's popularity skyrockets when he is chosen as the leader of a
     secret organization.
   simpsonsworld_id: 275745859881
-  good: false
+  good: true
   character: 
 - title: And Maggie Makes Three
   season: 6
@@ -107,14 +107,14 @@ episodes:
   episode: 14
   description: Bart discovers a comet that is on a collision course with Springfield.
   simpsonsworld_id: 275746883888
-  good: false
+  good: true
   character: 
 - title: Homie the Clown
   season: 6
   episode: 15
   description: Homer enrolls in a clown college franchised by Krusty the Clown.
   simpsonsworld_id: 279723587611
-  good: false
+  good: true
   character: 
 - title: Bart vs. Australia
   season: 6
@@ -122,7 +122,7 @@ episodes:
   description: Bart must apologize to the country of Australia after he tricks a boy
     from down under into accepting an expensive collect call.
   simpsonsworld_id: 275748931680
-  good: false
+  good: true
   character: 
 - title: Homer vs. Patty and Selma
   season: 6
@@ -130,7 +130,7 @@ episodes:
   description: Homer is forced to borrow money from Patty and Selma after he wipes
     out the family's savings by investing in pumpkins.
   simpsonsworld_id: 305686083529
-  good: false
+  good: true
   character: 
 - title: A Star Is Burns
   season: 6
@@ -138,7 +138,7 @@ episodes:
   description: Homer grows jealous after Marge asks critic Jay Sherman to co-judge
     Springfield's film festival.
   simpsonsworld_id: 283753539580
-  good: false
+  good: true
   character: 
 - title: Lisa's Wedding
   season: 6
@@ -154,7 +154,7 @@ episodes:
   description: Bart and Lisa attempt to rescue 25 greyhound puppies from Mr. Burns,
     who wants to use their hides for a new tuxedo.
   simpsonsworld_id: 278807107855
-  good: false
+  good: true
   character: 
 - title: The PTA Disbands
   season: 6
@@ -162,7 +162,7 @@ episodes:
   description: Bart masterminds a teacher's strike, but is humiliated when Marge takes
     charge of his class.
   simpsonsworld_id: 294780995610
-  good: false
+  good: true
   character: 
 - title: "'Round Springfield"
   season: 6
@@ -177,7 +177,7 @@ episodes:
   episode: 23
   description: Marge joins the police force.
   simpsonsworld_id: 305689155572
-  good: false
+  good: true
   character: 
 - title: Lemon of Troy
   season: 6
@@ -185,7 +185,7 @@ episodes:
   description: Bart and his friends march on Shelbyville when Springfield's lemon
     tree is stolen by a gang of children from across the border.
   simpsonsworld_id: 274269763684
-  good: false
+  good: true
   character: 
 - title: Who Shot Mr. Burns? (Part One)
   season: 6
@@ -194,5 +194,5 @@ episodes:
     cheats the elementary school out of a newly discovered oil well and threatens
     to block out the sun.
   simpsonsworld_id: 294781507859
-  good: false
+  good: true
   character: 
