--- a/episodes/season_07.yml
+++ b/episodes/season_07.yml
@@ -5,7 +5,7 @@ episodes:
   episode: 1
   description: Lisa aids police with the investigation of the Burns shooting.
   simpsonsworld_id: 305689667892
-  good: false
+  good: true
   character: 
 - title: Radioactive Man
   season: 7
@@ -13,7 +13,7 @@ episodes:
   description: Hollywood producers cast Milhouse in a motion picture based on the
     popular "Radioactive Man" comic books.
   simpsonsworld_id: 305693251940
-  good: false
+  good: true
   character: 
 - title: Home Sweet Homediddly-Dum-Doodily
   season: 7
@@ -21,7 +21,7 @@ episodes:
   description: The Flanders gain custody of the Simpson children after welfare workers
     accuse Homer and Marge of being negligent parents.
   simpsonsworld_id: 306174019869
-  good: false
+  good: true
   character: 
 - title: Bart Sells His Soul
   season: 7
@@ -29,21 +29,21 @@ episodes:
   description: Bart sells his soul to Milhouse for five dollars.  Moe transforms his
     bar into a family restaurant.
   simpsonsworld_id: 276972099995
-  good: false
+  good: true
   character: 
 - title: Lisa the Vegetarian
   season: 7
   episode: 5
   description: Lisa turns vegetarian after her family visits a petting zoo.
   simpsonsworld_id: 276980291592
-  good: false
+  good: true
   character: 
 - title: Treehouse of Horror VI
   season: 7
   episode: 6
   description: The Simpsons appear in three horrifying Halloween tales.
   simpsonsworld_id: 310404163601
-  good: false
+  good: true
   character: 
 - title: King-Size Homer
   season: 7
@@ -51,7 +51,7 @@ episodes:
   description: Homer intentionally gains weight so he can qualify for disability and
     work at home.
   simpsonsworld_id: 294786627843
-  good: false
+  good: true
   character: 
 - title: Mother Simpson
   season: 7
@@ -59,7 +59,7 @@ episodes:
   description: After Homer fakes his own death, his long-thought-deceased mother arrives
     in Springfield to pay her last respects.
   simpsonsworld_id: 276983875726
-  good: false
+  good: true
   character: 
 - title: Sideshow Bob's Last Gleaming
   season: 7
@@ -67,7 +67,7 @@ episodes:
   description: Sideshow Bob threatens to detonate a nuclear bomb unless television
     is abolished.
   simpsonsworld_id: 302792771516
-  good: false
+  good: true
   character: 
 - title: The Simpsons 138th Episode Spectacular
   season: 7
@@ -75,7 +75,7 @@ episodes:
   description: Troy McClure hosts this special 138th episode, which includes the first-ever
     cartoon shorts, trivia questions, and never-before-seen footage.
   simpsonsworld_id: 324451395934
-  good: false
+  good: true
   character: 
 - title: Marge Be Not Proud
   season: 7
@@ -83,7 +83,7 @@ episodes:
   description: As Christmas approaches, Marge treats Bart like an adult after he is
     caught shoplifting.
   simpsonsworld_id: 305669699710
-  good: false
+  good: true
   character: 
 - title: Team Homer
   season: 7
@@ -92,7 +92,7 @@ episodes:
     causes a student riot by wearing a Mad magazine iron-on prompting Skinner to implement
     a school dress code.
   simpsonsworld_id: 302792771967
-  good: false
+  good: true
   character: 
 - title: Two Bad Neighbors
   season: 7
@@ -100,14 +100,14 @@ episodes:
   description: Former President George Bush and his wife Barbara buy a house across
     the street from the Simpsons.
   simpsonsworld_id: 276994115834
-  good: false
+  good: true
   character: 
 - title: Scenes from the Class Struggle in Springfield
   season: 7
   episode: 14
   description: The Simpsons apply for membership at a posh country club.
   simpsonsworld_id: 305694276001
-  good: false
+  good: true
   character: 
 - title: Bart the Fink
   season: 7
@@ -115,7 +115,7 @@ episodes:
   description: Krusty is arrested for massive tax fraud after Bart inadvertently exposes
     his hero's illegal bank account.
   simpsonsworld_id: 301346371709
-  good: false
+  good: true
   character: 
 - title: Lisa the Iconoclast
   season: 7
@@ -123,14 +123,14 @@ episodes:
   description: Lisa discovers that Jebediah Springfield was a vicious pirate. Homer
     wins the coveted role of town crier in an upcoming parade.
   simpsonsworld_id: 302796355658
-  good: false
+  good: true
   character: 
 - title: Homer the Smithers
   season: 7
   episode: 17
   description: Homer acts as Mr. Burns' assistant while Smithers is away on vacation.
   simpsonsworld_id: 277248579634
-  good: false
+  good: maybe
   character: 
 - title: The Day the Violence Died
   season: 7
@@ -138,14 +138,14 @@ episodes:
   description: Bart and Lisa come to the aid of a down-and-out man who claims to have
     invented the concept of cartoon violence.
   simpsonsworld_id: 301668931982
-  good: false
+  good: true
   character: 
 - title: A Fish Called Selma
   season: 7
   episode: 19
   description: Troy McClure stages a Hollywood comeback when he begins dating Selma.
   simpsonsworld_id: 300935235544
-  good: false
+  good: true
   character: 
 - title: Bart on the Road
   season: 7
@@ -154,7 +154,7 @@ episodes:
     Break road trip with his friends.  A special bond develops between Lisa and Homer
     after Skinner invents Go To Work With Your Parents Day.
   simpsonsworld_id: 277000259951
-  good: false
+  good: true
   character: 
 - title: 22 Short Films About Springfield
   season: 7
@@ -162,7 +162,7 @@ episodes:
   description: The lives of Springfield residents are highlighted in a series of interconnecting
     vignettes.
   simpsonsworld_id: 299588163608
-  good: false
+  good: true
   character: 
 - title: Raging Abe Simpson and His Grumbling Grandson in 'The Curse of the Flying
     Hellfish'
@@ -171,7 +171,7 @@ episodes:
   description: Grampa and Mr. Burns, the last surviving members of a World War II
     army unit, vie for a priceless collection of rare art hidden in a secret location.
   simpsonsworld_id: 279728707597
-  good: false
+  good: maybe
   character: 
 - title: Much Apu About Nothing
   season: 7
@@ -179,14 +179,14 @@ episodes:
   description: Apu faces deportation when a referendum on illegal immigrants is placed
     on the Springfield ballot.
   simpsonsworld_id: 310404675978
-  good: false
+  good: true
   character: 
 - title: Homerpalooza
   season: 7
   episode: 24
   description: Homer is hired to perform in a rock festival.
   simpsonsworld_id: 277008451637
-  good: false
+  good: true
   character: 
 - title: Summer of 4 Ft. 2
   season: 7
@@ -194,5 +194,5 @@ episodes:
   description: While on summer vacation with her family, Lisa sheds her nerdy image
     in an effort to make new friends.
   simpsonsworld_id: 277013571573
-  good: false
+  good: true
   character: 
